# proximity-transformer

./: .gitignore  README.md  pyproject.toml
HW1-transformer/scripts/: compare_checkpoints.py  data_cleaning.py  download_mcap.py  evaluate.py  fast_shape_scan.py  inspect_mcap.py  train.py  urls.txt
HW1-transformer/src/: __init__.py
HW1-transformer/src/datasets/: __init__.py  dataset.py
HW1-transformer/src/models/: decoder.py  embeddings.py  encoder.py  heads.py  transformer.py
HW1-transformer/src/tests/: test_dataloader.py
HW1-transformer/src/trainers/: trainer.py
HW1-transformer/src/utils/: utils.py
